fixing up some contrast issues

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -14,7 +14,15 @@
 		background-color: $grey;
 
 		* {
-			color: #000;
+			color: #fff;
+		}
+	}
+
+	&:active {
+		background-color: $black;
+
+		* {
+			color: #fff;
 		}
 	}
 
