--- a/src/styles/colours.scss
+++ b/src/styles/colours.scss
@@ -1,8 +1,8 @@
 // Primitive colours
 	// white and black
 	$white: #eeeeee;
-	$white-secondary: #d2d2d2;
-	$grey: #6e6e6e;
+	$white-secondary: #c0c0c0;
+	$grey: #676767;
 	$black: #1e1e1e;
 
 	// Colours
